# on-the-wall

./: README.md  docker-compose.yml  render.yaml  seed.sql
.github/workflows/: ci.yml
server/: .dockerignore  Cargo.toml  Dockerfile
server/.sqlx/: query-f28f7216af47be07d64245f0ce3c4d40c85b8621ea2076e5fbb7b5bd8b6f0fb5.json
server/migrations/: 20260629170027_init.sql
server/src/: main.rs
