[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.16.0"
axum = "0.8.9"
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "time"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
url = "2.5.8"
